# cookdown

./: .gitignore  README.md  extract_paprika.py  pyproject.toml  run_paprika_tests.sh  run_tests.sh
examples/: Food Template.md
examples/input/: Air Fryer Cauliflower.paprikarecipe  Air Fryer Cauliflower.paprikarecipes  All-Purpose Gluten Free Flour Blend-1.crumb  Unzipped Air Fryer Cauliflower.json
examples/output/: Obsidian-food-template.md
input/: Oven-Fried Buffalo Chicken Wings.crumb
src/cookdown/: __init__.py  batch.py  convert.py  formatter.py
src/cookdown/parsers/: __init__.py  base.py  crumb.py  paprika.py
tests/: __init__.py  conftest.py  test_batch_convert.py  test_convert.py  test_crumb_to_md.py  test_image_handling.py  test_paprika.py  test_paprika_batch.py
